fix overflow footer

--- a/style.css
+++ b/style.css
@@ -354,6 +354,8 @@ a {
 
   .footer-item {
     text-align: center;
+    padding: 1rem 2rem;
   }
+
 
 }
